[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "transmolt"
version = "0.1.0"
authors = [
  { name="TransMolt Labs", email="transmolt@protonmail.com" },
]
description = "transmuting legacy logic into open standards."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "AGPL-3.0"}

[project.urls]
"Homepage" = "https://github.com/transmolt-labs"
